<resources>
    <string name="app_name">FtStudy</string>

    <string name="privacy_color">#D81B60</string>
    <!--    <string name="privacy_content">感谢您信任并选择使用APP-测试包！\n-->
    <!--特就《隐私保护政策》向您说明如下：-->
    <!--\n1、为实现向您提供APP-测试包产品或服务的基本功能，我们会收集、使用的必要的信息（例如位置信息、相册内容、设备、网络、系统版本信息等）。-->
    <!--\n2、为保障您的使用，我们会获取您的设备位置，用于定位您的当前所在的项目；我们需要使用本机的存储、相册、录音等权限，用于为您提供图片、视频上传、快速录入等功能；您有权拒绝上述的授权。-->
    <!--\n3、未经您同意，我们不会将上述信息提供给第三方或用于您未授权的其他用途。-->
    <!--\n4、您可以查询、更正您的个人信息，我们也提供账户注销的渠道。</string>-->

    <string name="agreement_html">
    点击阅读完整版本
 <a href='https://www.baidu.com/index.htm'>
    《用户协议》</a>和
    <a href='https://www.baidu.com/index.htm'>
    《隐私协议》</a>，了解详细信息。如果您同意，请点击同意并使用开始接受我们的服务。
</string>
    <string name="reason">无法打开网页，因为%s暂时无法连接。(%d)\n\n详情:%s</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="string_id_setting_test">stringID语言设置</string>
    <string name="landscape_tip">横屏啦</string>
    <string name="language_setting_en">设置成英文啦</string>
    <string name="language_setting_cn">设置成中文啦</string>
    <string name="vertical_tip">竖屏啦</string>
    <string name="language_vertical">点击前往竖屏</string>
    <string name="language_go_landscape">点击前往横屏</string>
    <string name="language_click_sw_v_l">点击切换横竖屏</string>

</resources>