<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".language.LanguageActivity">

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/vertical_tip" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btSettingEn"
        android:text="@string/language_setting_en" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btSettingCn"
        android:text="@string/language_setting_cn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btSettingVerticalOrLandscape"
        android:text="@string/language_click_sw_v_l" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toVerticalAct"
        android:text="@string/language_vertical" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toLandScapeAct"
        android:text="@string/language_go_landscape"/>

</LinearLayout>